add new features

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kasper</title>
     <!-- render elments -->
-    <link rel="stylesheet" href="CSS/normalize.css"/>
+    <link rel="stylesheet" href="CSS&JS/normalize.css" />
     <!-- font awsamne -->
-    <link rel="stylesheet" href="CSS/all.min.css"/>
+    <link rel="stylesheet" href="CSS&JS/all.min.css" />
     <!-- style sheet -->
-    <link rel="stylesheet" href="CSS/kasper.css"/>
-     <!-- google fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS&JS/tools.css" />
+    <link rel="stylesheet" href="CSS&JS/kasper.css" />
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200;1,800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
+    <div class="scroller"></div>
     <!-- Header -->
     <header>
         <div class="container">
@@ -35,8 +41,8 @@
                 <div class="form">
                     <i class="fas fa-search"></i>
                 </div>
-            </nav> 
-        </div> 
+            </nav>
+        </div>
     </header>
     <!-- Header -->
     <!-- Landing -->
@@ -45,8 +51,10 @@
             <div class="text">
                 <div class="content">
                     <h2>hello world! <br>
-                    we are kasper we make art.</h2>
-                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem. Mauris blandit 
+                        we are kasper we make art.</h2>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at
+                        sem. Mauris blandit
                         aliquet elit, eget tincidunt.
                     </p>
                 </div>
@@ -71,47 +79,47 @@
                 </p>
             </div>
             <div class="services-container">
-                 <div class="srv-box">
-                        <i class="fas fa-desktop fa-3x"></i>
+                <div class="srv-box">
+                    <i class="fas fa-desktop fa-3x"></i>
                     <div class="text">
                         <h3>Vorem amet intuitive</h3>
                         <p>Curabitur arcu erat, accumsan id imperdiet et,
-                        porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                            porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
                         </p>
                     </div>
-                 </div> 
-                 <div class="srv-box">
-                        <i class="fas fa-cog fa-3x"></i>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-cog fa-3x"></i>
                     <div class="text">
                         <h3>Vorem amet intuitive</h3>
                         <p>Curabitur arcu erat, accumsan id imperdiet et,
-                        porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                            porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
                         </p>
                     </div>
-                 </div> 
-                 <div class="srv-box">
-                        <i class="fas fa-pencil-ruler fa-3x"></i>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-pencil-ruler fa-3x"></i>
                     <div class="text">
                         <h3>Vorem amet intuitive</h3>
                         <p>Curabitur arcu erat, accumsan id imperdiet et,
-                        porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                            porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
                         </p>
                     </div>
-                 </div> 
-                 <div class="srv-box">
-                        <i class="fas fa-camera fa-3x"></i>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-camera fa-3x"></i>
                     <div class="text">
                         <h3>Vorem amet intuitive</h3>
                         <p>Curabitur arcu erat, accumsan id imperdiet et,
-                        porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                            porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
                         </p>
                     </div>
-                 </div> 
+                </div>
             </div>
         </div>
     </div>
     <!-- services -->
-    
+
     <!-- design-->
     <div class="design">
         <div class="image">
@@ -209,12 +217,12 @@
     <!-- portfolio-->
     <!-- video-->
     <div class="video">
-        <video autoplay muted loop >
+        <video autoplay muted loop>
             <source src="images/awesome-video.mp4" type="video/mp4">
         </video>
         <div class="text">
             <h2>super Awosme video here</h2>
-            <p>its all  you need</p>
+            <p>its all you need</p>
             <button>see more</button>
         </div>
     </div>
@@ -237,62 +245,64 @@
     <div class="stats">
         <div class="container">
             <div class="box">
-              <i class="fas fa-mug-hot"></i>
-              <div class="number">1.236</div>
-              <p>Coffee Drinks</p>
+                <i class="fas fa-mug-hot"></i>
+                <div class="number">1.236</div>
+                <p>Coffee Drinks</p>
             </div>
             <div class="box">
-              <i class="far fa-folder"></i>
-              <div class="number">256</div>
-              <p>Completed Projects</p>
+                <i class="far fa-folder"></i>
+                <div class="number">256</div>
+                <p>Completed Projects</p>
             </div>
             <div class="box">
-              <i class="far fa-envelope"></i>
-              <div class="number">1,743</div>
-              <p>Mail Sent</p>
+                <i class="far fa-envelope"></i>
+                <div class="number">1,743</div>
+                <p>Mail Sent</p>
             </div>
             <div class="box">
-              <i class="fas fa-trophy"></i>
-              <div class="number">17</div>
-              <p>Awards Received</p>
+                <i class="fas fa-trophy"></i>
+                <div class="number">17</div>
+                <p>Awards Received</p>
             </div>
-          </div>
+        </div>
     </div>
     <!-- stats-->
     <!-- skills-->
     <div class="our-skills">
         <div class="container">
             <div class="testimonials">
-          <h3>Testimonials</h3>
-          <p>
-            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
-            tincidunt.
-          </p>
-          <div class="content">
-            <img src="images/skills-01.jpg" alt="">
-            <div class="text">
-              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
-              tincidunt.
-              <p>John Doe, CEO</p>
+                <h3>Testimonials</h3>
+                <p>
+                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+                    tincidunt.
+                </p>
+                <div class="content">
+                    <img src="images/skills-01.jpg" alt="">
+                    <div class="text">
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget
+                        tincidunt.
+                        <p>John Doe, CEO</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <img src="images/skills-02.jpg" alt="">
+                    <div class="text">
+                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit,
+                        eget
+                        tincidunt.
+                        <p>John Doe, CEO</p>
+                    </div>
+                </div>
+                <ul class="bullets">
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
             </div>
-          </div>
-          <div class="content">
-            <img src="images/skills-02.jpg" alt="">
-            <div class="text">
-              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
-              tincidunt.
-              <p>John Doe, CEO</p>
-            </div>
-          </div>
-          <ul class="bullets">
-            <li></li>
-            <li class="active"></li>
-            <li></li>
-          </ul>
-        </div>
             <div class="skills">
                 <h3>testimonials</h3>
-                 <p>Curabitur arcu erat, accumsan id imperdiet et,
+                <p>Curabitur arcu erat, accumsan id imperdiet et,
                     porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
                 </p>
                 <div class="prog-holder">
@@ -324,12 +334,12 @@
     </div>
     <!-- skills-->
     <!-- quote-->
-      <div class="quote">
+    <div class="quote">
         <div class="container">
             <q>accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</q>
             <p>John Doe</p>
         </div>
-      </div>
+    </div>
     <!-- quote-->
     <!-- pricing-->
     <div class="pricing">
@@ -346,60 +356,60 @@
                         <h3>basic</h3>
                         <span>19</span>
                     </div>
-                        <ul>
-                            <li>feature no 1</li>
-                            <li>feature feature</li>
-                            <li>extra feature no 2</li>
-                            <li>feature</li>
-                        </ul>
-                        <div class="foot">
-                            <a href="#">buy now</a>
-                        </div>
+                    <ul>
+                        <li>feature no 1</li>
+                        <li>feature feature</li>
+                        <li>extra feature no 2</li>
+                        <li>feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
                 </div>
                 <div class="plan">
                     <div class="head">
                         <h3>PREMIUM</h3>
                         <span>29</span>
                     </div>
-                        <ul>
-                            <li>feature no 1</li>
-                            <li>feature feature</li>
-                            <li>extra feature no 2</li>
-                            <li>feature</li>
-                        </ul>
-                        <div class="foot">
-                            <a href="#">buy now</a>
-                        </div>
+                    <ul>
+                        <li>feature no 1</li>
+                        <li>feature feature</li>
+                        <li>extra feature no 2</li>
+                        <li>feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
                 </div>
                 <div class="plan">
                     <div class="head">
                         <h3>pro</h3>
                         <span>39</span>
                     </div>
-                        <ul>
-                            <li>feature no 1</li>
-                            <li>feature feature</li>
-                            <li>extra feature no 2</li>
-                            <li>feature</li>
-                        </ul>
-                        <div class="foot">
-                            <a href="#">buy now</a>
-                        </div>
+                    <ul>
+                        <li>feature no 1</li>
+                        <li>feature feature</li>
+                        <li>extra feature no 2</li>
+                        <li>feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
                 </div>
                 <div class="plan">
                     <div class="head">
                         <h3>PLATINUM</h3>
                         <span>49</span>
                     </div>
-                        <ul>
-                            <li>feature no 1</li>
-                            <li>feature feature</li>
-                            <li>extra feature no 2</li>
-                            <li>feature</li>
-                        </ul>
-                        <div class="foot">
-                            <a href="#">buy now</a>
-                        </div>
+                    <ul>
+                        <li>feature no 1</li>
+                        <li>feature feature</li>
+                        <li>extra feature no 2</li>
+                        <li>feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
                 </div>
             </div>
             <p class="contact-text">contact us if yo have a special request..</p>
@@ -410,16 +420,17 @@
 
     <!-- subscribe-->
     <div class="subscribe">
-      <div class="container">
-        <form action="">
-          <i class="far fa-envelope fa-lg"></i>
-          <input type="email" name="mail" placeholder="Your Email">
-          <input type="submit" value="Subscribe">
-        </form>
-        <p>
-          Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.
-        </p>
-      </div>
+        <div class="container">
+            <form action="">
+                <i class="far fa-envelope fa-lg"></i>
+                <input type="email" name="mail" placeholder="Your Email">
+                <input type="submit" value="Subscribe">
+            </form>
+            <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget
+                tincidunt.
+            </p>
+        </div>
     </div>
     <!-- subscribe-->
 
@@ -436,7 +447,7 @@
                 <form action="">
                     <input class="main-input" type="text" name="name" placeholder="your name">
                     <input class="main-input" type="email" name="mail" placeholder="your email">
-                    <textarea class="main-input" name="message"  placeholder="your message"></textarea>
+                    <textarea class="main-input" name="message" placeholder="your message"></textarea>
                     <input type="submit" value="send message">
                 </form>
                 <div class="info">
@@ -453,19 +464,24 @@
 
     <!-- footer-->
     <div class="footer">
-      <div class="container">
-        <img src="images/logo.png" alt="Logo">
-        <p>We Are Social</p>
-        <div class="social-icons">
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fas fa-home"></i>
-          <i class="fab fa-linkedin"></i>
+        <div class="container">
+            <img src="images/logo.png" alt="Logo">
+            <p>We Are Social</p>
+            <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-home"></i>
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <p class="copyright">© 2023 <span>Kasper</span> All Right Reserved</p>
         </div>
-        <p class="copyright">© 2023 <span>Kasper</span> All Right Reserved</p>
-      </div>
     </div>
     <!-- footer-->
-    
+    <div class="dotted-loader"></div>
+    <div class="scroller"></div>
+    <span class="up">Up</span>
+
+    <script src="CSS&JS/tools.js"></script>
 </body>
+
 </html>
